--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "compile:sass": "node-sass sass/main.scss css/style.css -w",
-    "start": "live-server --browser=explorer"
+    "start": "live-server --browser=explorer",
+    "x": "npm run compile:sass && start"
   },
   "author": "",
   "license": "ISC",
